--- a/OnovaStore/Areas/Manage/Views/Manager/AddBrand.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/AddBrand.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnovaStore.Areas.Manage.Models.Brand.AddBrandViewModel
 @{
-    ViewData["Title"] = "Add new brand";
+    ViewBag.Title = "Add new brand";
     Layout = "_Layout";
 }
 
