--- a/OnovaStore/Areas/Manage/Views/Manager/AddCategory.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/AddCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using OnovaStore.Areas.Manage.Data
 @model OnovaStore.Areas.Manage.Models.Category.AddCategoryViewModel
 @{
-    ViewData["Title"] = "Add new Category";
+    ViewBag.Title = "Add new Category";
     Layout = "_Layout";
 }
 
