--- a/OnovaStore/Areas/Manage/Views/Manager/AddProduct.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/AddProduct.cshtml
@@ -1,7 +1,7 @@
 ﻿@using OnovaStore.Areas.Manage.Data
 @model OnovaStore.Areas.Manage.Models.Product.AddProductViewModel
 @{
-    ViewData["Title"] = "Add new Product";
+    ViewBag.Title = "Add new Product";
     Layout = "_Layout";
 }
 
