--- a/OnovaStore/Areas/Manage/Views/Manager/AddPromotion.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/AddPromotion.cshtml
@@ -1,7 +1,7 @@
 ﻿@using OnovaStore.Areas.Manage.Data
 @model OnovaStore.Areas.Manage.Models.Promotion.AddPromotionViewModel
 @{
-    ViewData["Title"] = "Add new Promotion";
+    ViewBag.Title = "Add new Promotion";
     Layout = "_Layout";
 }
 
