--- a/OnovaStore/Areas/Manage/Views/Manager/Brands.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/Brands.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnovaStore.Helpers.PaginatedList<OnovaStore.Areas.Manage.Data.GetBrandForStaff>
 @{
-    ViewData["Title"] = "List of Brand";
+    ViewBag.Title = "List of Brand";
     Layout = "_Layout";
 }
 
