--- a/OnovaStore/Areas/Manage/Views/Manager/Categories.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/Categories.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnovaStore.Helpers.PaginatedList<OnovaStore.Areas.Manage.Data.GetCategoryForStaff>
 @{
-    ViewData["Title"] = "List of Category";
+    ViewBag.Title = "List of Category";
     Layout = "_Layout";
 }
 
