--- a/OnovaStore/Areas/Manage/Views/Manager/Products.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/Products.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnovaStore.Helpers.PaginatedList<OnovaStore.Areas.Manage.Data.GetProductForStaff>
 @{
-    ViewData["Title"] = "List of Product";
+    ViewBag.Title = "List of Product";
     Layout = "_Layout";
 }
 
