--- a/OnovaStore/Areas/Manage/Views/Manager/Promotions.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/Promotions.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnovaStore.Helpers.PaginatedList<OnovaStore.Areas.Manage.Data.GetPromotionForStaff>
 @{
-    ViewData["Title"] = "List of Promotion";
+    ViewBag.Title = "List of Promotion";
     Layout = "_Layout";
 }
 
