--- a/OnovaStore/Areas/Manage/Views/Manager/UploadImage.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/UploadImage.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnovaStore.Areas.Manage.Models.Image.UploadImageViewModel
 @{
-    ViewData["Title"] = "Upload Image";
+    ViewBag.Title = "Upload Image";
     Layout = "_Layout";
 }
 <div style="text-align: center; padding-top: 50px">
