--- a/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="~/html/assets/css/unify-admin.css">
     <!-- CSS Customization -->
     <link rel="stylesheet" href="~/html/assets/css/custom.css">
+    <script src="~/html/assets/vendor/jquery/jquery.min.js"></script>
+    
 
     @RenderSection("Styles", required: false)
 </head>
@@ -50,7 +52,8 @@
         </div>
     </main>
     <!-- JS Global Compulsory -->
-    <script src="~/html/assets/vendor/jquery/jquery.min.js"></script>
+<script src="~/html/assets/vendor/jquery/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mouse0270-bootstrap-notify/3.1.5/bootstrap-notify.min.js"></script>
     <script src="~/html/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
     <script src="~/html/assets/vendor/popper.min.js"></script>
     <script src="~/html/assets/vendor/bootstrap/bootstrap.min.js"></script>
@@ -95,64 +98,65 @@
     <!-- JS Custom -->
     <script src="~/html/assets/js/custom.js"></script>
     <!-- JS Plugins Init. -->
-    <script>
-        $(document).on('ready',
-            function () {
-                // initialization of custom select
-                $('.js-select').selectpicker();
+<script>
+    $(document).on('ready',
+        function () {
+            // initialization of custom select
+            $('.js-select').selectpicker();
 
-                // initialization of sidebar navigation component
-                $.HSCore.components.HSSideNav.init('.js-side-nav');
+            // initialization of sidebar navigation component
+            $.HSCore.components.HSSideNav.init('.js-side-nav');
 
-                // initialization of hamburger
-                $.HSCore.helpers.HSHamburgers.init('.hamburger');
+            // initialization of hamburger
+            $.HSCore.helpers.HSHamburgers.init('.hamburger');
 
-                // initialization of charts
-                $.HSCore.components.HSAreaChart.init('.js-area-chart');
-                $.HSCore.components.HSDonutChart.init('.js-donut-chart');
-                $.HSCore.components.HSBarChart.init('.js-bar-chart');
+            // initialization of charts
+            $.HSCore.components.HSAreaChart.init('.js-area-chart');
+            $.HSCore.components.HSDonutChart.init('.js-donut-chart');
+            $.HSCore.components.HSBarChart.init('.js-bar-chart');
 
-                // initialization of range datepicker
-                $.HSCore.components.HSRangeDatepicker.init('#rangeDatepicker, #rangeDatepicker2, #rangeDatepicker3');
-                $.HSCore.components.HSRangeDatepicker.init('.js-range-datepicker');
+            // initialization of range datepicker
+            $.HSCore.components.HSRangeDatepicker.init('#rangeDatepicker, #rangeDatepicker2, #rangeDatepicker3');
+            $.HSCore.components.HSRangeDatepicker.init('.js-range-datepicker');
 
-                // initialization of datepicker
-                $.HSCore.components.HSDatepicker.init('#datepicker',
-                    {
-                        dayNamesMin: [
-                            'SU',
-                            'MO',
-                            'TU',
-                            'WE',
-                            'TH',
-                            'FR',
-                            'SA'
-                        ]
-                    });
-
-                // initialization of HSDropdown component
-                $.HSCore.components.HSDropdown.init($('[data-dropdown-target]'), {
-                    dropdownHideOnScroll: false,
-                    dropdownType: 'css-animation',
-                    dropdownAnimationIn: 'fadeIn',
-                    dropdownAnimationOut: 'fadeOut'
+            // initialization of datepicker
+            $.HSCore.components.HSDatepicker.init('#datepicker',
+                {
+                    dayNamesMin: [
+                        'SU',
+                        'MO',
+                        'TU',
+                        'WE',
+                        'TH',
+                        'FR',
+                        'SA'
+                    ]
                 });
 
-                // initialization of custom scrollbar
-                $.HSCore.components.HSScrollBar.init($('.js-custom-scroll'));
-
-                // initialization of datatables
-                $.HSCore.components.HSDatatables.init('.js-datatable');
-
-                // initialization of popups
-                $.HSCore.components.HSPopup.init('.js-fancybox',
-                    {
-                        btnTpl: {
-                            smallBtn:
-                            '<button data-fancybox-close class="btn g-pos-abs g-top-25 g-right-30 g-line-height-1 g-bg-transparent g-font-size-16 g-color-gray-light-v3 g-brd-none p-0" title=""><i class="hs-admin-close"></i></button>'
-                        }
-                    });
+            // initialization of HSDropdown component
+            $.HSCore.components.HSDropdown.init($('[data-dropdown-target]'), {
+                dropdownHideOnScroll: false,
+                dropdownType: 'css-animation',
+                dropdownAnimationIn: 'fadeIn',
+                dropdownAnimationOut: 'fadeOut'
             });
-    </script>
+
+            // initialization of custom scrollbar
+            $.HSCore.components.HSScrollBar.init($('.js-custom-scroll'));
+
+            // initialization of datatables
+            $.HSCore.components.HSDatatables.init('.js-datatable');
+
+            // initialization of popups
+            $.HSCore.components.HSPopup.init('.js-fancybox',
+                {
+                    btnTpl: {
+                        smallBtn:
+                            '<button data-fancybox-close class="btn g-pos-abs g-top-25 g-right-30 g-line-height-1 g-bg-transparent g-font-size-16 g-color-gray-light-v3 g-brd-none p-0" title=""><i class="hs-admin-close"></i></button>'
+                    }
+                });
+        });
+</script>
+@RenderSection("Scripts", false)
 </body>
 </html>
