--- a/OnovaStore/Areas/Manage/Views/Admin/Index.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Admin/Index.cshtml
@@ -6,12 +6,12 @@
 
 <div class="g-pa-20">
     <h3 class="g-font-weight-300 g-font-size-22 g-color-black g-mb-30">
-        <a style="text-decoration: none" href="@Url.Action("AddStaff", "Admin", new {Area = "Manage"})">Add new brand</a>
+        <a style="text-decoration: none" href="@Url.Action("AddStaff", "Admin", new {Area = "Manage"})">Add new staff</a>
     </h3>
 
     <div class="media-md align-items-center g-mb-30">
         <div class="d-flex g-mb-15 g-mb-0--md">
-            <h3 class="g-font-weight-400 g-font-size-16 g-color-black mb-0">Brands</h3>
+            <h3 class="g-font-weight-400 g-font-size-16 g-color-black mb-0">Staffs</h3>
         </div>
         <div class="media d-md-flex align-items-center ml-auto">
             <form asp-action="Index" method="get">
