--- a/OnovaStore/Views/Shared/_Layout.cshtml
+++ b/OnovaStore/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="~/html/assets/css/custom.css">
     <script src="~/html/assets/vendor/jquery/jquery.min.js"></script>
     @RenderSection("Styles", required: false)
-    @RenderSection("AdditionalStyles", required: false)
+@*    @RenderSection("AdditionalStyles", required: false)*@
 </head>
 <body>
 <main>
@@ -176,6 +176,6 @@
         });
 </script>
 @RenderSection("Scripts", required: false)
-@RenderSection("AdditionalScripts", required: false)
+@*@RenderSection("AdditionalScripts", required: false)*@
 </body>
 </html>
