--- a/OnovaStore/Areas/Manage/Views/Admin/Index.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Admin/Index.cshtml
@@ -62,21 +62,21 @@
                                 </div>
                             </div>
                         </th>
-                        <th>
-                            <div class="media">
-                                <div class="d-flex align-self-center">Salary</div>
-                                <div class="d-flex align-self-center ml-auto">
-                                    <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" style="@(ViewData["SortOrder"].ToString() == "salary" ? "color: #007bff !important;" : "")" asp-action="Index" asp-route-sortOrder="salary" asp-route-currentFilter="@ViewData["CurrentFilter"]">
-                                            <i class="hs-admin-angle-up"></i>
-                                        </a>
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" style="@(ViewData["SortOrder"].ToString() == "salary_desc" ? "color: #007bff !important;" : "")" asp-action="Index" asp-route-sortOrder="salary_desc" asp-route-currentFilter="@ViewData["CurrentFilter"]">
-                                            <i class="hs-admin-angle-down"></i>
-                                        </a>
-                                    </span>
-                                </div>
-                            </div>
-                        </th>
+@*                        <th>*@
+@*                            <div class="media">*@
+@*                                <div class="d-flex align-self-center">Salary</div>*@
+@*                                <div class="d-flex align-self-center ml-auto">*@
+@*                                    <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">*@
+@*                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" style="@(ViewData["SortOrder"].ToString() == "salary" ? "color: #007bff !important;" : "")" asp-action="Index" asp-route-sortOrder="salary" asp-route-currentFilter="@ViewData["CurrentFilter"]">*@
+@*                                            <i class="hs-admin-angle-up"></i>*@
+@*                                        </a>*@
+@*                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" style="@(ViewData["SortOrder"].ToString() == "salary_desc" ? "color: #007bff !important;" : "")" asp-action="Index" asp-route-sortOrder="salary_desc" asp-route-currentFilter="@ViewData["CurrentFilter"]">*@
+@*                                            <i class="hs-admin-angle-down"></i>*@
+@*                                        </a>*@
+@*                                    </span>*@
+@*                                </div>*@
+@*                            </div>*@
+@*                        </th>*@
                         <th>
                             <div class="media">
                                 <div class="d-flex align-self-center">Email</div>
@@ -119,7 +119,7 @@
                             <tr>
                                 <td>@staff.fullName</td>
                                 <td>@staff.addDate</td>
-                                <td>$@staff.salary</td>
+@*                                <td>$@staff.salary</td>*@
                                 <td>@staff.email</td>
                                 <td>@staff.role</td>
                                 <td class="text-right">
@@ -220,8 +220,6 @@
                     request.setRequestHeader("Authorization", "Bearer " + getCookie("jwt"));
                 },
                 success: function (val) {
-                    var totalPrice = 0;
-                    var numberQuantity = 0;
                     if (val.status == 'Success') {
                         $.notify({
                                 title: '<strong>Password reset</strong>',
